# binsmart

./: CMakeLists.txt
src/: findH.cpp  inversa.cpp  original.cpp  tm.cpp  tm.hpp  tm_core.cpp
